@@ -18,10 +18,6 @@
  */
 package org.apache.pinot.controller.helix;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Lists;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ExecutorService;
@@ -52,19 +48,21 @@ import org.apache.pinot.spi.metrics.PinotMetricsRegistry;
 import org.apache.pinot.spi.utils.CommonConstants;
 import org.apache.pinot.spi.utils.builder.TableConfigBuilder;
 import org.apache.pinot.spi.utils.builder.TableNameBuilder;
-import org.testng.Assert;
 import org.testng.annotations.Test;
 
-import static org.apache.pinot.spi.utils.CommonConstants.DEFAULT_DATABASE;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
+import static org.testng.Assert.assertEquals;
+import static org.testng.Assert.assertFalse;
 
 
 public class SegmentStatusCheckerTest {
+  private final ExecutorService _executorService = Executors.newFixedThreadPool(1);
+
   private SegmentStatusChecker _segmentStatusChecker;
   private PinotHelixResourceManager _helixResourceManager;
   private ZkHelixPropertyStore<ZNRecord> _helixPropertyStore;
@@ -73,18 +71,15 @@ public class SegmentStatusCheckerTest {
   private ControllerMetrics _controllerMetrics;
   private ControllerConf _config;
   private TableSizeReader _tableSizeReader;
-  private ExecutorService _executorService = Executors.newFixedThreadPool(1);
 
   @Test
   public void offlineBasicTest()
       throws Exception {
-    final String tableName = "myTable_OFFLINE";
-    List<String> allTableNames = new ArrayList<String>();
-    allTableNames.add(tableName);
+    String offlineTableName = "myTable_OFFLINE";
     TableConfig tableConfig =
-        new TableConfigBuilder(TableType.OFFLINE).setTableName(tableName).setNumReplicas(2).build();
+        new TableConfigBuilder(TableType.OFFLINE).setTableName(offlineTableName).setNumReplicas(2).build();
 
-    IdealState idealState = new IdealState(tableName);
+    IdealState idealState = new IdealState(offlineTableName);
     idealState.setPartitionState("myTable_0", "pinot1", "ONLINE");
     idealState.setPartitionState("myTable_0", "pinot2", "ONLINE");
     idealState.setPartitionState("myTable_0", "pinot3", "ONLINE");
@@ -101,7 +96,7 @@ public class SegmentStatusCheckerTest {
     idealState.setReplicas("2");
     idealState.setRebalanceMode(IdealState.RebalanceMode.CUSTOMIZED);
 
-    ExternalView externalView = new ExternalView(tableName);
+    ExternalView externalView = new ExternalView(offlineTableName);
     externalView.setState("myTable_0", "pinot1", "ONLINE");
     externalView.setState("myTable_0", "pinot2", "ONLINE");
     externalView.setState("myTable_1", "pinot1", "ERROR");
@@ -114,27 +109,23 @@ public class SegmentStatusCheckerTest {
 
     {
       _helixResourceManager = mock(PinotHelixResourceManager.class);
-      when(_helixResourceManager.getDatabaseNames())
-          .thenReturn(Collections.singletonList(DEFAULT_DATABASE));
-      when(_helixResourceManager.getAllTables(DEFAULT_DATABASE)).thenReturn(allTableNames);
-      when(_helixResourceManager.getTableConfig(tableName)).thenReturn(tableConfig);
-      when(_helixResourceManager.getTableIdealState(tableName)).thenReturn(idealState);
-      when(_helixResourceManager.getTableExternalView(tableName)).thenReturn(externalView);
+      when(_helixResourceManager.getAllTables()).thenReturn(List.of(offlineTableName));
+      when(_helixResourceManager.getTableConfig(offlineTableName)).thenReturn(tableConfig);
+      when(_helixResourceManager.getTableIdealState(offlineTableName)).thenReturn(idealState);
+      when(_helixResourceManager.getTableExternalView(offlineTableName)).thenReturn(externalView);
     }
     {
       _helixPropertyStore = mock(ZkHelixPropertyStore.class);
       when(_helixResourceManager.getPropertyStore()).thenReturn(_helixPropertyStore);
       // Based on the lineage entries: {myTable_1 -> myTable_3, COMPLETED}, {myTable_3 -> myTable_4, IN_PROGRESS},
       // myTable_1 and myTable_4 will be skipped for the metrics.
-      SegmentLineage segmentLineage = new SegmentLineage(tableName);
+      SegmentLineage segmentLineage = new SegmentLineage(offlineTableName);
       segmentLineage.addLineageEntry(SegmentLineageUtils.generateLineageEntryId(),
-          new LineageEntry(Collections.singletonList("myTable_1"), Collections.singletonList("myTable_3"),
-              LineageEntryState.COMPLETED, 11111L));
+          new LineageEntry(List.of("myTable_1"), List.of("myTable_3"), LineageEntryState.COMPLETED, 11111L));
       segmentLineage.addLineageEntry(SegmentLineageUtils.generateLineageEntryId(),
-          new LineageEntry(Collections.singletonList("myTable_3"), Collections.singletonList("myTable_4"),
-              LineageEntryState.IN_PROGRESS, 11111L));
-      when(_helixPropertyStore.get(eq("/SEGMENT_LINEAGE/" + tableName), any(), eq(AccessOption.PERSISTENT)))
-          .thenReturn(segmentLineage.toZNRecord());
+          new LineageEntry(List.of("myTable_3"), List.of("myTable_4"), LineageEntryState.IN_PROGRESS, 11111L));
+      when(_helixPropertyStore.get(eq("/SEGMENT_LINEAGE/" + offlineTableName), any(),
+          eq(AccessOption.PERSISTENT))).thenReturn(segmentLineage.toZNRecord());
     }
     {
       _config = mock(ControllerConf.class);
@@ -158,40 +149,41 @@ public class SegmentStatusCheckerTest {
     _segmentStatusChecker.setTableSizeReader(_tableSizeReader);
     _segmentStatusChecker.start();
     _segmentStatusChecker.run();
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, tableName,
+
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, offlineTableName,
         ControllerGauge.REPLICATION_FROM_CONFIG), 2);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.SEGMENT_COUNT), 3);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.SEGMENT_COUNT_INCLUDING_REPLACED), 5);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.SEGMENTS_IN_ERROR_STATE), 1);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+    assertEquals(
+        MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(), ControllerGauge.SEGMENT_COUNT),
+        3);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.SEGMENT_COUNT_INCLUDING_REPLACED), 5);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.SEGMENTS_IN_ERROR_STATE), 1);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
         ControllerGauge.SEGMENTS_WITH_LESS_REPLICAS), 2);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.NUMBER_OF_REPLICAS), 2);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.PERCENT_OF_REPLICAS), 66);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.PERCENT_SEGMENTS_AVAILABLE), 100);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.TABLE_COMPRESSED_SIZE), 0);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.NUMBER_OF_REPLICAS), 2);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.PERCENT_OF_REPLICAS), 66);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.PERCENT_SEGMENTS_AVAILABLE), 100);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.TABLE_COMPRESSED_SIZE), 0);
   }
 
   @Test
   public void realtimeBasicTest()
       throws Exception {
-    final String tableName = "myTable_REALTIME";
-    final String rawTableName = TableNameBuilder.extractRawTableName(tableName);
-    List<String> allTableNames = new ArrayList<String>();
-    allTableNames.add(tableName);
+    String rawTableName = "myTable";
+    String realtimeTableName = TableNameBuilder.REALTIME.tableNameWithType(rawTableName);
     TableConfig tableConfig =
-        new TableConfigBuilder(TableType.REALTIME).setTableName(tableName).setTimeColumnName("timeColumn")
+        new TableConfigBuilder(TableType.REALTIME).setTableName(rawTableName).setTimeColumnName("timeColumn")
             .setNumReplicas(3).setStreamConfigs(getStreamConfigMap()).build();
-    final LLCSegmentName seg1 = new LLCSegmentName(rawTableName, 1, 0, System.currentTimeMillis());
-    final LLCSegmentName seg2 = new LLCSegmentName(rawTableName, 1, 1, System.currentTimeMillis());
-    final LLCSegmentName seg3 = new LLCSegmentName(rawTableName, 2, 1, System.currentTimeMillis());
-    IdealState idealState = new IdealState(tableName);
+
+    LLCSegmentName seg1 = new LLCSegmentName(rawTableName, 1, 0, System.currentTimeMillis());
+    LLCSegmentName seg2 = new LLCSegmentName(rawTableName, 1, 1, System.currentTimeMillis());
+    LLCSegmentName seg3 = new LLCSegmentName(rawTableName, 2, 1, System.currentTimeMillis());
+    IdealState idealState = new IdealState(realtimeTableName);
     idealState.setPartitionState(seg1.getSegmentName(), "pinot1", "ONLINE");
     idealState.setPartitionState(seg1.getSegmentName(), "pinot2", "ONLINE");
     idealState.setPartitionState(seg1.getSegmentName(), "pinot3", "ONLINE");
@@ -204,7 +196,7 @@ public class SegmentStatusCheckerTest {
     idealState.setReplicas("3");
     idealState.setRebalanceMode(IdealState.RebalanceMode.CUSTOMIZED);
 
-    ExternalView externalView = new ExternalView(tableName);
+    ExternalView externalView = new ExternalView(realtimeTableName);
     externalView.setState(seg1.getSegmentName(), "pinot1", "ONLINE");
     externalView.setState(seg1.getSegmentName(), "pinot2", "ONLINE");
     externalView.setState(seg1.getSegmentName(), "pinot3", "ONLINE");
@@ -218,13 +210,11 @@ public class SegmentStatusCheckerTest {
     {
       _helixResourceManager = mock(PinotHelixResourceManager.class);
       _helixPropertyStore = mock(ZkHelixPropertyStore.class);
-      when(_helixResourceManager.getTableConfig(tableName)).thenReturn(tableConfig);
+      when(_helixResourceManager.getTableConfig(realtimeTableName)).thenReturn(tableConfig);
       when(_helixResourceManager.getPropertyStore()).thenReturn(_helixPropertyStore);
-      when(_helixResourceManager.getDatabaseNames())
-          .thenReturn(Collections.singletonList(DEFAULT_DATABASE));
-      when(_helixResourceManager.getAllTables(DEFAULT_DATABASE)).thenReturn(allTableNames);
-      when(_helixResourceManager.getTableIdealState(tableName)).thenReturn(idealState);
-      when(_helixResourceManager.getTableExternalView(tableName)).thenReturn(externalView);
+      when(_helixResourceManager.getAllTables()).thenReturn(List.of(realtimeTableName));
+      when(_helixResourceManager.getTableIdealState(realtimeTableName)).thenReturn(idealState);
+      when(_helixResourceManager.getTableExternalView(realtimeTableName)).thenReturn(externalView);
       ZNRecord znRecord = new ZNRecord("0");
       znRecord.setSimpleField(CommonConstants.Segment.Realtime.END_OFFSET, "10000");
       when(_helixPropertyStore.get(anyString(), any(), anyInt())).thenReturn(znRecord);
@@ -251,27 +241,25 @@ public class SegmentStatusCheckerTest {
     _segmentStatusChecker.setTableSizeReader(_tableSizeReader);
     _segmentStatusChecker.start();
     _segmentStatusChecker.run();
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, tableName,
-            ControllerGauge.REPLICATION_FROM_CONFIG), 3);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.SEGMENTS_IN_ERROR_STATE), 0);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, realtimeTableName,
+        ControllerGauge.REPLICATION_FROM_CONFIG), 3);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.SEGMENTS_IN_ERROR_STATE), 0);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
         ControllerGauge.SEGMENTS_WITH_LESS_REPLICAS), 0);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.NUMBER_OF_REPLICAS), 3);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.PERCENT_OF_REPLICAS), 100);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.PERCENT_SEGMENTS_AVAILABLE), 100);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.MISSING_CONSUMING_SEGMENT_TOTAL_COUNT), 2);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.NUMBER_OF_REPLICAS), 3);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.PERCENT_OF_REPLICAS), 100);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.PERCENT_SEGMENTS_AVAILABLE), 100);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.MISSING_CONSUMING_SEGMENT_TOTAL_COUNT), 2);
   }
 
   Map<String, String> getStreamConfigMap() {
-    return ImmutableMap.of(
-        "streamType", "kafka",
-        "stream.kafka.consumer.type", "simple",
-        "stream.kafka.topic.name", "test",
+    return Map.of("streamType", "kafka", "stream.kafka.consumer.type", "simple", "stream.kafka.topic.name", "test",
         "stream.kafka.decoder.class.name", "org.apache.pinot.plugin.stream.kafka.KafkaAvroMessageDecoder",
         "stream.kafka.consumer.factory.class.name",
         "org.apache.pinot.core.realtime.impl.fakestream.FakeStreamConsumerFactory");
@@ -281,8 +269,7 @@ public class SegmentStatusCheckerTest {
   public void missingEVPartitionTest()
       throws Exception {
     String offlineTableName = "myTable_OFFLINE";
-    List<String> allTableNames = new ArrayList<String>();
-    allTableNames.add(offlineTableName);
+
     IdealState idealState = new IdealState(offlineTableName);
     idealState.setPartitionState("myTable_0", "pinot1", "ONLINE");
     idealState.setPartitionState("myTable_0", "pinot2", "ONLINE");
@@ -317,21 +304,19 @@ public class SegmentStatusCheckerTest {
     ZkHelixPropertyStore<ZNRecord> propertyStore;
     {
       propertyStore = (ZkHelixPropertyStore<ZNRecord>) mock(ZkHelixPropertyStore.class);
-      when(propertyStore.get("/SEGMENTS/myTable_OFFLINE/myTable_3", null, AccessOption.PERSISTENT))
-          .thenReturn(znrecord);
+      when(propertyStore.get("/SEGMENTS/myTable_OFFLINE/myTable_3", null, AccessOption.PERSISTENT)).thenReturn(
+          znrecord);
     }
 
     {
       _helixResourceManager = mock(PinotHelixResourceManager.class);
       _helixPropertyStore = mock(ZkHelixPropertyStore.class);
       when(_helixResourceManager.getPropertyStore()).thenReturn(_helixPropertyStore);
-      when(_helixResourceManager.getDatabaseNames())
-          .thenReturn(Collections.singletonList(DEFAULT_DATABASE));
-      when(_helixResourceManager.getAllTables(DEFAULT_DATABASE)).thenReturn(allTableNames);
+      when(_helixResourceManager.getAllTables()).thenReturn(List.of(offlineTableName));
       when(_helixResourceManager.getTableIdealState(offlineTableName)).thenReturn(idealState);
       when(_helixResourceManager.getTableExternalView(offlineTableName)).thenReturn(externalView);
-      when(_helixResourceManager.getSegmentZKMetadata(offlineTableName, "myTable_3"))
-          .thenReturn(new SegmentZKMetadata(znrecord));
+      when(_helixResourceManager.getSegmentZKMetadata(offlineTableName, "myTable_3")).thenReturn(
+          new SegmentZKMetadata(znrecord));
     }
     {
       _config = mock(ControllerConf.class);
@@ -355,25 +340,25 @@ public class SegmentStatusCheckerTest {
     _segmentStatusChecker.setTableSizeReader(_tableSizeReader);
     _segmentStatusChecker.start();
     _segmentStatusChecker.run();
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.SEGMENTS_IN_ERROR_STATE), 1);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.SEGMENTS_IN_ERROR_STATE), 1);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
         ControllerGauge.SEGMENTS_WITH_LESS_REPLICAS), 2);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.NUMBER_OF_REPLICAS), 0);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.PERCENT_SEGMENTS_AVAILABLE), 75);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.TABLE_COMPRESSED_SIZE), 1111);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.NUMBER_OF_REPLICAS), 0);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.PERCENT_SEGMENTS_AVAILABLE), 75);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.TABLE_COMPRESSED_SIZE), 1111);
   }
 
   @Test
   public void missingEVTest()
       throws Exception {
-    final String tableName = "myTable_REALTIME";
-    List<String> allTableNames = new ArrayList<String>();
-    allTableNames.add(tableName);
-    IdealState idealState = new IdealState(tableName);
+    String realtimeTableName = "myTable_REALTIME";
+
+    IdealState idealState = new IdealState(realtimeTableName);
     idealState.setPartitionState("myTable_0", "pinot1", "ONLINE");
     idealState.setPartitionState("myTable_0", "pinot2", "ONLINE");
     idealState.setPartitionState("myTable_0", "pinot3", "ONLINE");
@@ -388,11 +373,9 @@ public class SegmentStatusCheckerTest {
       _helixResourceManager = mock(PinotHelixResourceManager.class);
       _helixPropertyStore = mock(ZkHelixPropertyStore.class);
       when(_helixResourceManager.getPropertyStore()).thenReturn(_helixPropertyStore);
-      when(_helixResourceManager.getDatabaseNames())
-          .thenReturn(Collections.singletonList(DEFAULT_DATABASE));
-      when(_helixResourceManager.getAllTables(DEFAULT_DATABASE)).thenReturn(allTableNames);
-      when(_helixResourceManager.getTableIdealState(tableName)).thenReturn(idealState);
-      when(_helixResourceManager.getTableExternalView(tableName)).thenReturn(null);
+      when(_helixResourceManager.getAllTables()).thenReturn(List.of(realtimeTableName));
+      when(_helixResourceManager.getTableIdealState(realtimeTableName)).thenReturn(idealState);
+      when(_helixResourceManager.getTableExternalView(realtimeTableName)).thenReturn(null);
     }
     {
       _config = mock(ControllerConf.class);
@@ -416,30 +399,28 @@ public class SegmentStatusCheckerTest {
     _segmentStatusChecker.setTableSizeReader(_tableSizeReader);
     _segmentStatusChecker.start();
     _segmentStatusChecker.run();
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, tableName,
-            ControllerGauge.SEGMENTS_IN_ERROR_STATE), 0);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, tableName,
+
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, realtimeTableName,
+        ControllerGauge.SEGMENTS_IN_ERROR_STATE), 0);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, realtimeTableName,
         ControllerGauge.SEGMENTS_WITH_LESS_REPLICAS), 0);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, tableName,
-            ControllerGauge.NUMBER_OF_REPLICAS), 0);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, tableName,
-            ControllerGauge.TABLE_COMPRESSED_SIZE), 0);
+    assertEquals(
+        MetricValueUtils.getTableGaugeValue(_controllerMetrics, realtimeTableName, ControllerGauge.NUMBER_OF_REPLICAS),
+        0);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, realtimeTableName,
+        ControllerGauge.TABLE_COMPRESSED_SIZE), 0);
   }
 
   @Test
   public void missingIdealTest()
       throws Exception {
-    final String tableName = "myTable_REALTIME";
-    List<String> allTableNames = new ArrayList<>();
-    allTableNames.add(tableName);
+    String realtimeTableName = "myTable_REALTIME";
 
     {
       _helixResourceManager = mock(PinotHelixResourceManager.class);
-      when(_helixResourceManager.getDatabaseNames())
-          .thenReturn(Collections.singletonList(DEFAULT_DATABASE));
-      when(_helixResourceManager.getAllTables(DEFAULT_DATABASE)).thenReturn(allTableNames);
-      when(_helixResourceManager.getTableIdealState(tableName)).thenReturn(null);
-      when(_helixResourceManager.getTableExternalView(tableName)).thenReturn(null);
+      when(_helixResourceManager.getAllTables()).thenReturn(List.of(realtimeTableName));
+      when(_helixResourceManager.getTableIdealState(realtimeTableName)).thenReturn(null);
+      when(_helixResourceManager.getTableExternalView(realtimeTableName)).thenReturn(null);
     }
     {
       _config = mock(ControllerConf.class);
@@ -463,24 +444,24 @@ public class SegmentStatusCheckerTest {
     _segmentStatusChecker.setTableSizeReader(_tableSizeReader);
     _segmentStatusChecker.start();
     _segmentStatusChecker.run();
-    Assert.assertFalse(MetricValueUtils.tableGaugeExists(_controllerMetrics, tableName,
-            ControllerGauge.SEGMENTS_IN_ERROR_STATE));
-    Assert.assertFalse(MetricValueUtils.tableGaugeExists(_controllerMetrics, tableName,
+
+    assertFalse(MetricValueUtils.tableGaugeExists(_controllerMetrics, realtimeTableName,
+        ControllerGauge.SEGMENTS_IN_ERROR_STATE));
+    assertFalse(MetricValueUtils.tableGaugeExists(_controllerMetrics, realtimeTableName,
         ControllerGauge.SEGMENTS_WITH_LESS_REPLICAS));
-    Assert.assertFalse(MetricValueUtils.tableGaugeExists(_controllerMetrics, tableName,
-            ControllerGauge.NUMBER_OF_REPLICAS));
-    Assert.assertFalse(MetricValueUtils.tableGaugeExists(_controllerMetrics, tableName,
-            ControllerGauge.PERCENT_OF_REPLICAS));
-    Assert.assertFalse(MetricValueUtils.tableGaugeExists(_controllerMetrics, tableName,
-            ControllerGauge.TABLE_COMPRESSED_SIZE));
+    assertFalse(
+        MetricValueUtils.tableGaugeExists(_controllerMetrics, realtimeTableName, ControllerGauge.NUMBER_OF_REPLICAS));
+    assertFalse(
+        MetricValueUtils.tableGaugeExists(_controllerMetrics, realtimeTableName, ControllerGauge.PERCENT_OF_REPLICAS));
+    assertFalse(MetricValueUtils.tableGaugeExists(_controllerMetrics, realtimeTableName,
+        ControllerGauge.TABLE_COMPRESSED_SIZE));
   }
 
   @Test
   public void missingEVPartitionPushTest()
       throws Exception {
     String offlineTableName = "myTable_OFFLINE";
-    List<String> allTableNames = new ArrayList<String>();
-    allTableNames.add(offlineTableName);
+
     IdealState idealState = new IdealState(offlineTableName);
     idealState.setPartitionState("myTable_0", "pinot1", "ONLINE");
     idealState.setPartitionState("myTable_1", "pinot1", "ONLINE");
@@ -527,15 +508,13 @@ public class SegmentStatusCheckerTest {
       _helixResourceManager = mock(PinotHelixResourceManager.class);
       _helixPropertyStore = mock(ZkHelixPropertyStore.class);
       when(_helixResourceManager.getPropertyStore()).thenReturn(_helixPropertyStore);
-      when(_helixResourceManager.getDatabaseNames())
-          .thenReturn(Collections.singletonList(DEFAULT_DATABASE));
-      when(_helixResourceManager.getAllTables(DEFAULT_DATABASE)).thenReturn(allTableNames);
+      when(_helixResourceManager.getAllTables()).thenReturn(List.of(offlineTableName));
       when(_helixResourceManager.getTableIdealState(offlineTableName)).thenReturn(idealState);
       when(_helixResourceManager.getTableExternalView(offlineTableName)).thenReturn(externalView);
-      when(_helixResourceManager.getSegmentZKMetadata(offlineTableName, "myTable_0"))
-          .thenReturn(new SegmentZKMetadata(znrecord));
-      when(_helixResourceManager.getSegmentZKMetadata(offlineTableName, "myTable_2"))
-          .thenReturn(new SegmentZKMetadata(znrecord2));
+      when(_helixResourceManager.getSegmentZKMetadata(offlineTableName, "myTable_0")).thenReturn(
+          new SegmentZKMetadata(znrecord));
+      when(_helixResourceManager.getSegmentZKMetadata(offlineTableName, "myTable_2")).thenReturn(
+          new SegmentZKMetadata(znrecord2));
     }
     {
       _config = mock(ControllerConf.class);
@@ -559,27 +538,27 @@ public class SegmentStatusCheckerTest {
     _segmentStatusChecker.setTableSizeReader(_tableSizeReader);
     _segmentStatusChecker.start();
     _segmentStatusChecker.run();
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.SEGMENTS_IN_ERROR_STATE), 0);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.SEGMENTS_IN_ERROR_STATE), 0);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
         ControllerGauge.SEGMENTS_WITH_LESS_REPLICAS), 0);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.NUMBER_OF_REPLICAS), 2);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.PERCENT_OF_REPLICAS), 100);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.PERCENT_SEGMENTS_AVAILABLE), 100);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.TABLE_COMPRESSED_SIZE), 0);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.NUMBER_OF_REPLICAS), 2);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.PERCENT_OF_REPLICAS), 100);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.PERCENT_SEGMENTS_AVAILABLE), 100);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.TABLE_COMPRESSED_SIZE), 0);
   }
 
   @Test
   public void noReplicas()
       throws Exception {
-    final String tableName = "myTable_REALTIME";
-    List<String> allTableNames = new ArrayList<String>();
-    allTableNames.add(tableName);
-    IdealState idealState = new IdealState(tableName);
+    String realtimeTableName = "myTable_REALTIME";
+
+    IdealState idealState = new IdealState(realtimeTableName);
     idealState.setPartitionState("myTable_0", "pinot1", "OFFLINE");
     idealState.setPartitionState("myTable_0", "pinot2", "OFFLINE");
     idealState.setPartitionState("myTable_0", "pinot3", "OFFLINE");
@@ -590,11 +569,9 @@ public class SegmentStatusCheckerTest {
       _helixResourceManager = mock(PinotHelixResourceManager.class);
       _helixPropertyStore = mock(ZkHelixPropertyStore.class);
       when(_helixResourceManager.getPropertyStore()).thenReturn(_helixPropertyStore);
-      when(_helixResourceManager.getDatabaseNames())
-          .thenReturn(Collections.singletonList(DEFAULT_DATABASE));
-      when(_helixResourceManager.getAllTables(DEFAULT_DATABASE)).thenReturn(allTableNames);
-      when(_helixResourceManager.getTableIdealState(tableName)).thenReturn(idealState);
-      when(_helixResourceManager.getTableExternalView(tableName)).thenReturn(null);
+      when(_helixResourceManager.getAllTables()).thenReturn(List.of(realtimeTableName));
+      when(_helixResourceManager.getTableIdealState(realtimeTableName)).thenReturn(idealState);
+      when(_helixResourceManager.getTableExternalView(realtimeTableName)).thenReturn(null);
     }
     {
       _config = mock(ControllerConf.class);
@@ -618,26 +595,26 @@ public class SegmentStatusCheckerTest {
     _segmentStatusChecker.setTableSizeReader(_tableSizeReader);
     _segmentStatusChecker.start();
     _segmentStatusChecker.run();
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, tableName,
+
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, realtimeTableName,
         ControllerGauge.SEGMENTS_IN_ERROR_STATE), 0);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, tableName,
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, realtimeTableName,
         ControllerGauge.SEGMENTS_WITH_LESS_REPLICAS), 0);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, tableName,
-            ControllerGauge.NUMBER_OF_REPLICAS), 1);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, tableName,
-        ControllerGauge.PERCENT_OF_REPLICAS), 100);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, tableName,
-            ControllerGauge.PERCENT_SEGMENTS_AVAILABLE), 100);
+    assertEquals(
+        MetricValueUtils.getTableGaugeValue(_controllerMetrics, realtimeTableName, ControllerGauge.NUMBER_OF_REPLICAS),
+        1);
+    assertEquals(
+        MetricValueUtils.getTableGaugeValue(_controllerMetrics, realtimeTableName, ControllerGauge.PERCENT_OF_REPLICAS),
+        100);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, realtimeTableName,
+        ControllerGauge.PERCENT_SEGMENTS_AVAILABLE), 100);
   }
 
   @Test
-  public void disabledTableTest()
-      throws Exception {
+  public void disabledTableTest() {
+    String offlineTableName = "myTable_OFFLINE";
 
-    final String tableName = "myTable_OFFLINE";
-    List<String> allTableNames = new ArrayList<String>();
-    allTableNames.add(tableName);
-    IdealState idealState = new IdealState(tableName);
+    IdealState idealState = new IdealState(offlineTableName);
     // disable table in idealstate
     idealState.enable(false);
     idealState.setPartitionState("myTable_OFFLINE", "pinot1", "OFFLINE");
@@ -648,11 +625,9 @@ public class SegmentStatusCheckerTest {
 
     {
       _helixResourceManager = mock(PinotHelixResourceManager.class);
-      when(_helixResourceManager.getDatabaseNames())
-          .thenReturn(Collections.singletonList(DEFAULT_DATABASE));
-      when(_helixResourceManager.getAllTables(DEFAULT_DATABASE)).thenReturn(allTableNames);
-      when(_helixResourceManager.getTableIdealState(tableName)).thenReturn(idealState);
-      when(_helixResourceManager.getTableExternalView(tableName)).thenReturn(null);
+      when(_helixResourceManager.getAllTables()).thenReturn(List.of(offlineTableName));
+      when(_helixResourceManager.getTableIdealState(offlineTableName)).thenReturn(idealState);
+      when(_helixResourceManager.getTableExternalView(offlineTableName)).thenReturn(null);
     }
     {
       _config = mock(ControllerConf.class);
@@ -669,23 +644,21 @@ public class SegmentStatusCheckerTest {
     _segmentStatusChecker =
         new SegmentStatusChecker(_helixResourceManager, _leadControllerManager, _config, _controllerMetrics,
             _executorService);
+
     // verify state before test
-    Assert.assertEquals(
-        MetricValueUtils.getGlobalGaugeValue(_controllerMetrics, ControllerGauge.DISABLED_TABLE_COUNT), 0);
+    assertEquals(MetricValueUtils.getGlobalGaugeValue(_controllerMetrics, ControllerGauge.DISABLED_TABLE_COUNT), 0);
+
     // update metrics
     _segmentStatusChecker.start();
     _segmentStatusChecker.run();
-    Assert.assertEquals(
-        MetricValueUtils.getGlobalGaugeValue(_controllerMetrics, ControllerGauge.DISABLED_TABLE_COUNT), 1);
+    assertEquals(MetricValueUtils.getGlobalGaugeValue(_controllerMetrics, ControllerGauge.DISABLED_TABLE_COUNT), 1);
   }
 
   @Test
-  public void disabledEmptyTableTest()
-      throws Exception {
+  public void disabledEmptyTableTest() {
+    String offlineTableName = "myTable_OFFLINE";
 
-    final String tableName = "myTable_OFFLINE";
-    List<String> allTableNames = Lists.newArrayList(tableName);
-    IdealState idealState = new IdealState(tableName);
+    IdealState idealState = new IdealState(offlineTableName);
     // disable table in idealstate
     idealState.enable(false);
     idealState.setReplicas("1");
@@ -693,11 +666,9 @@ public class SegmentStatusCheckerTest {
 
     {
       _helixResourceManager = mock(PinotHelixResourceManager.class);
-      when(_helixResourceManager.getDatabaseNames())
-          .thenReturn(Collections.singletonList(DEFAULT_DATABASE));
-      when(_helixResourceManager.getAllTables(DEFAULT_DATABASE)).thenReturn(allTableNames);
-      when(_helixResourceManager.getTableIdealState(tableName)).thenReturn(idealState);
-      when(_helixResourceManager.getTableExternalView(tableName)).thenReturn(null);
+      when(_helixResourceManager.getAllTables()).thenReturn(List.of(offlineTableName));
+      when(_helixResourceManager.getTableIdealState(offlineTableName)).thenReturn(idealState);
+      when(_helixResourceManager.getTableExternalView(offlineTableName)).thenReturn(null);
     }
     {
       _config = mock(ControllerConf.class);
@@ -714,14 +685,14 @@ public class SegmentStatusCheckerTest {
     _segmentStatusChecker =
         new SegmentStatusChecker(_helixResourceManager, _leadControllerManager, _config, _controllerMetrics,
             _executorService);
+
     // verify state before test
-    Assert.assertFalse(
-        MetricValueUtils.globalGaugeExists(_controllerMetrics, ControllerGauge.DISABLED_TABLE_COUNT));
+    assertFalse(MetricValueUtils.globalGaugeExists(_controllerMetrics, ControllerGauge.DISABLED_TABLE_COUNT));
+
     // update metrics
     _segmentStatusChecker.start();
     _segmentStatusChecker.run();
-    Assert.assertEquals(
-        MetricValueUtils.getGlobalGaugeValue(_controllerMetrics, ControllerGauge.DISABLED_TABLE_COUNT), 1);
+    assertEquals(MetricValueUtils.getGlobalGaugeValue(_controllerMetrics, ControllerGauge.DISABLED_TABLE_COUNT), 1);
   }
 
   @Test
@@ -734,22 +705,20 @@ public class SegmentStatusCheckerTest {
 
   @Test
   public void lessThanOnePercentSegmentsUnavailableTest()
-          throws Exception {
-    String tableName = "myTable_OFFLINE";
-    int numSegments = 200;
-    List<String> allTableNames = new ArrayList<String>();
-    allTableNames.add(tableName);
+      throws Exception {
+    String offlineTableName = "myTable_OFFLINE";
     TableConfig tableConfig =
-            new TableConfigBuilder(TableType.OFFLINE).setTableName(tableName).setNumReplicas(1).build();
+        new TableConfigBuilder(TableType.OFFLINE).setTableName(offlineTableName).setNumReplicas(1).build();
 
-    IdealState idealState = new IdealState(tableName);
+    IdealState idealState = new IdealState(offlineTableName);
+    int numSegments = 200;
     for (int i = 0; i < numSegments; i++) {
       idealState.setPartitionState("myTable_" + i, "pinot1", "ONLINE");
     }
     idealState.setReplicas("1");
     idealState.setRebalanceMode(IdealState.RebalanceMode.CUSTOMIZED);
 
-    ExternalView externalView = new ExternalView(tableName);
+    ExternalView externalView = new ExternalView(offlineTableName);
     externalView.setState("myTable_0", "pinot1", "OFFLINE");
     for (int i = 1; i < numSegments; i++) {
       externalView.setState("myTable_" + i, "pinot1", "ONLINE");
@@ -757,68 +726,17 @@ public class SegmentStatusCheckerTest {
 
     {
       _helixResourceManager = mock(PinotHelixResourceManager.class);
-      when(_helixResourceManager.getDatabaseNames())
-          .thenReturn(Collections.singletonList(DEFAULT_DATABASE));
-      when(_helixResourceManager.getAllTables(DEFAULT_DATABASE)).thenReturn(allTableNames);
-      when(_helixResourceManager.getTableConfig(tableName)).thenReturn(tableConfig);
-      when(_helixResourceManager.getTableIdealState(tableName)).thenReturn(idealState);
-      when(_helixResourceManager.getTableExternalView(tableName)).thenReturn(externalView);
+      when(_helixResourceManager.getAllTables()).thenReturn(List.of(offlineTableName));
+      when(_helixResourceManager.getTableConfig(offlineTableName)).thenReturn(tableConfig);
+      when(_helixResourceManager.getTableIdealState(offlineTableName)).thenReturn(idealState);
+      when(_helixResourceManager.getTableExternalView(offlineTableName)).thenReturn(externalView);
     }
     {
       _helixPropertyStore = mock(ZkHelixPropertyStore.class);
       when(_helixResourceManager.getPropertyStore()).thenReturn(_helixPropertyStore);
-      SegmentLineage segmentLineage = new SegmentLineage(tableName);
-      when(_helixPropertyStore.get(eq("/SEGMENT_LINEAGE/" + tableName), any(), eq(AccessOption.PERSISTENT)))
-              .thenReturn(segmentLineage.toZNRecord());
-    }
-    {
-      _config = mock(ControllerConf.class);
-      when(_config.getStatusCheckerFrequencyInSeconds()).thenReturn(300);
-      when(_config.getStatusCheckerWaitForPushTimeInSeconds()).thenReturn(300);
-    }
-    {
-      _leadControllerManager = mock(LeadControllerManager.class);
-      when(_leadControllerManager.isLeaderForTable(anyString())).thenReturn(true);
-    }
-    {
-      _tableSizeReader = mock(TableSizeReader.class);
-      when(_tableSizeReader.getTableSizeDetails(anyString(), anyInt())).thenReturn(null);
-    }
-    PinotMetricUtils.cleanUp();
-    _metricsRegistry = PinotMetricUtils.getPinotMetricsRegistry();
-    _controllerMetrics = new ControllerMetrics(_metricsRegistry);
-    _segmentStatusChecker =
-            new SegmentStatusChecker(_helixResourceManager, _leadControllerManager, _config, _controllerMetrics,
-                    _executorService);
-    _segmentStatusChecker.setTableSizeReader(_tableSizeReader);
-    _segmentStatusChecker.start();
-    _segmentStatusChecker.run();
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
-            ControllerGauge.PERCENT_SEGMENTS_AVAILABLE), 99);
-  }
-
-  public void noSegmentsInternal(final int nReplicas)
-      throws Exception {
-    final String tableName = "myTable_REALTIME";
-    String nReplicasStr = Integer.toString(nReplicas);
-    int nReplicasExpectedValue = nReplicas;
-    if (nReplicas < 0) {
-      nReplicasStr = "abc";
-      nReplicasExpectedValue = 1;
-    }
-    List<String> allTableNames = new ArrayList<String>();
-    allTableNames.add(tableName);
-    IdealState idealState = new IdealState(tableName);
-    idealState.setReplicas(nReplicasStr);
-    idealState.setRebalanceMode(IdealState.RebalanceMode.CUSTOMIZED);
-
-    {
-      _helixResourceManager = mock(PinotHelixResourceManager.class);
-      when(_helixResourceManager.getDatabaseNames())
-          .thenReturn(Collections.singletonList(DEFAULT_DATABASE));
-      when(_helixResourceManager.getAllTables(DEFAULT_DATABASE)).thenReturn(allTableNames);
-      when(_helixResourceManager.getTableIdealState(tableName)).thenReturn(idealState);
-      when(_helixResourceManager.getTableExternalView(tableName)).thenReturn(null);
+      SegmentLineage segmentLineage = new SegmentLineage(offlineTableName);
+      when(_helixPropertyStore.get(eq("/SEGMENT_LINEAGE/" + offlineTableName), any(),
+          eq(AccessOption.PERSISTENT))).thenReturn(segmentLineage.toZNRecord());
     }
     {
       _config = mock(ControllerConf.class);
@@ -843,15 +761,64 @@ public class SegmentStatusCheckerTest {
     _segmentStatusChecker.start();
     _segmentStatusChecker.run();
 
-    Assert.assertFalse(MetricValueUtils.tableGaugeExists(_controllerMetrics, tableName,
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, externalView.getId(),
+        ControllerGauge.PERCENT_SEGMENTS_AVAILABLE), 99);
+  }
+
+  public void noSegmentsInternal(final int nReplicas)
+      throws Exception {
+    String realtimeTableName = "myTable_REALTIME";
+
+    String nReplicasStr = Integer.toString(nReplicas);
+    int nReplicasExpectedValue = nReplicas;
+    if (nReplicas < 0) {
+      nReplicasStr = "abc";
+      nReplicasExpectedValue = 1;
+    }
+    IdealState idealState = new IdealState(realtimeTableName);
+    idealState.setReplicas(nReplicasStr);
+    idealState.setRebalanceMode(IdealState.RebalanceMode.CUSTOMIZED);
+
+    {
+      _helixResourceManager = mock(PinotHelixResourceManager.class);
+      when(_helixResourceManager.getAllTables()).thenReturn(List.of(realtimeTableName));
+      when(_helixResourceManager.getTableIdealState(realtimeTableName)).thenReturn(idealState);
+      when(_helixResourceManager.getTableExternalView(realtimeTableName)).thenReturn(null);
+    }
+    {
+      _config = mock(ControllerConf.class);
+      when(_config.getStatusCheckerFrequencyInSeconds()).thenReturn(300);
+      when(_config.getStatusCheckerWaitForPushTimeInSeconds()).thenReturn(300);
+    }
+    {
+      _leadControllerManager = mock(LeadControllerManager.class);
+      when(_leadControllerManager.isLeaderForTable(anyString())).thenReturn(true);
+    }
+    {
+      _tableSizeReader = mock(TableSizeReader.class);
+      when(_tableSizeReader.getTableSizeDetails(anyString(), anyInt())).thenReturn(null);
+    }
+    PinotMetricUtils.cleanUp();
+    _metricsRegistry = PinotMetricUtils.getPinotMetricsRegistry();
+    _controllerMetrics = new ControllerMetrics(_metricsRegistry);
+    _segmentStatusChecker =
+        new SegmentStatusChecker(_helixResourceManager, _leadControllerManager, _config, _controllerMetrics,
+            _executorService);
+    _segmentStatusChecker.setTableSizeReader(_tableSizeReader);
+    _segmentStatusChecker.start();
+    _segmentStatusChecker.run();
+
+    assertFalse(MetricValueUtils.tableGaugeExists(_controllerMetrics, realtimeTableName,
         ControllerGauge.SEGMENTS_IN_ERROR_STATE));
-    Assert.assertFalse(MetricValueUtils.tableGaugeExists(_controllerMetrics, tableName,
+    assertFalse(MetricValueUtils.tableGaugeExists(_controllerMetrics, realtimeTableName,
         ControllerGauge.SEGMENTS_IN_ERROR_STATE));
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, tableName,
-        ControllerGauge.NUMBER_OF_REPLICAS), nReplicasExpectedValue);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, tableName,
-        ControllerGauge.PERCENT_OF_REPLICAS), 100);
-    Assert.assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, tableName,
+    assertEquals(
+        MetricValueUtils.getTableGaugeValue(_controllerMetrics, realtimeTableName, ControllerGauge.NUMBER_OF_REPLICAS),
+        nReplicasExpectedValue);
+    assertEquals(
+        MetricValueUtils.getTableGaugeValue(_controllerMetrics, realtimeTableName, ControllerGauge.PERCENT_OF_REPLICAS),
+        100);
+    assertEquals(MetricValueUtils.getTableGaugeValue(_controllerMetrics, realtimeTableName,
         ControllerGauge.PERCENT_SEGMENTS_AVAILABLE), 100);
   }
 }
